--- a/src/jquery.theminesweeper.css
+++ b/src/jquery.theminesweeper.css
@@ -1,4 +1,25 @@
 
+.ss-minesweeper-shell {
+    padding: .2em; 
+}
 
+.ss-minesweeper-display {
+    padding:1.2em .2em 1.2em; margin-bottom:.2em; 
+}
 
+.ss-minesweeper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 19.1em;
+}
 
+.ui-button-text {
+    font-size: 10px;
+}
+
+.ss-minesweeper-mines {
+
+    text-align: right;
+    color: red;
+
+}
