--- a/src/jquery.theminesweeper.css
+++ b/src/jquery.theminesweeper.css
@@ -33,3 +33,7 @@
     background-image: url(../images/smiley.ico) !important;
 }
 
+.flag-smiley {
+    background-image: url(../images/flag.ico) !important;
+}
+
