--- a/src/jquery.theminesweeper.css
+++ b/src/jquery.theminesweeper.css
@@ -37,3 +37,7 @@
     background-image: url(../images/flag.ico) !important;
 }
 
+.mine-smiley {
+    background-image: url(../images/mine.ico) !important;
+}
+
