--- a/src/jquery.theminesweeper.css
+++ b/src/jquery.theminesweeper.css
@@ -1,3 +1,9 @@
+/* theminesweeper
+ * https://github.com/leosartaj/jquery.minesweeper.js
+ *
+ * Copyright (c) 2014 Sartaj Singh
+ * Licensed under the MIT license.
+ */
 
 .ss-minesweeper-shell {
     padding: .2em; 
@@ -10,34 +16,35 @@
 .ss-minesweeper {
     margin-left: auto;
     margin-right: auto;
-    width: 37em;
+    width: 19.1em;
 }
 
 .ui-button-text {
     font-size: 10px;
 }
 
+/* location of custom icons */
 .happy-smiley {
-    background-image: url(../images/smiley1.ico) !important;
+    background-image: url(../example/images/smiley1.ico) !important;
 }
 
 .check-smiley {
-    background-image: url(../images/smiley2.ico) !important;
+    background-image: url(../example/images/smiley2.ico) !important;
 }
 
 .sad-smiley {
-    background-image: url(../images/smiley3.ico) !important;
+    background-image: url(../example/images/smiley3.ico) !important;
 }
 
 .cool-smiley {
-    background-image: url(../images/smiley.ico) !important;
+    background-image: url(../example/images/smiley.ico) !important;
 }
 
 .flag-smiley {
-    background-image: url(../images/flag.ico) !important;
+    background-image: url(../example/images/flag.ico) !important;
 }
 
 .mine-smiley {
-    background-image: url(../images/mine.ico) !important;
+    background-image: url(../example/images/mine.ico) !important;
 }
 
