--- a/src/jquery.theminesweeper.css
+++ b/src/jquery.theminesweeper.css
@@ -25,26 +25,26 @@
 
 /* location of custom icons */
 .happy-smiley {
-    background-image: url(../example/images/smiley1.ico) !important;
+    background-image: url(../example/images/smiley.png) !important;
 }
 
 .check-smiley {
-    background-image: url(../example/images/smiley2.ico) !important;
+    background-image: url(../example/images/smiley2.png) !important;
 }
 
 .sad-smiley {
-    background-image: url(../example/images/smiley3.ico) !important;
+    background-image: url(../example/images/smiley3.png) !important;
 }
 
 .cool-smiley {
-    background-image: url(../example/images/smiley.ico) !important;
+    background-image: url(../example/images/smiley.png) !important;
 }
 
 .flag-smiley {
-    background-image: url(../example/images/flag.ico) !important;
+    background-image: url(../example/images/flag.png) !important;
 }
 
 .mine-smiley {
-    background-image: url(../example/images/mine.ico) !important;
+    background-image: url(../example/images/mine.png) !important;
 }
 
