--- a/src/jquery.theminesweeper.css
+++ b/src/jquery.theminesweeper.css
@@ -25,7 +25,7 @@
 
 /* location of custom icons */
 .happy-smiley {
-    background-image: url(../example/images/smiley.png) !important;
+    background-image: url(../example/images/smiley1.png) !important;
 }
 
 .check-smiley {
